# TOTVS-ATLAS

./: .env.example  .gitignore  README.md  pyproject.toml
APP/notebooks/: exploracao_inicial.ipynb
Arquitetura/: totvs_agent.excalidraw
Sprints/: EC_Sprint_1_2TSCOA_ideacaoprojeto_Atlas_Esparta.pptx
Templates_Desafio/: README.md
